# pydantic-attack

./: .gitignore  README.md  pyproject.toml
pydantic_attack/: models.py
tests/: context.py  test_pydanic_attack.py
