[tool.poetry]
name = "pydantic-attack"
version = "0.1.0"
description = "Pydantic Python class representations of the MITRE ATT&CK framework"
authors = ["Brendan Chamberlain <brendan@infosecb.com>"]
readme = "README.md"
packages = [{include = "pydantic_attack"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
